--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ skl2onnx = "^1.16.0"
 imblearn = "^0.0"
 pingouin = "^0.5.4"
 xgboost = "^2.0.3"
-aif360 = "^0.6.0"
+aif360 = {extras = ["infairness"], version = "^0.6.0"}
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "*"
